--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- <script src="https://kit.fontawesome.com/087026354d.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Niramit&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css‌​/font-awesome.min.cs‌​s">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
